--- a/haml/about.haml
+++ b/haml/about.haml
@@ -18,9 +18,9 @@
 				%nav
 					%ul.nav-list
 						%li
-							%a.active(href="index.html")Home
+							%a(href="index.html")Home
 						%li
-							%a(href="about.html")About
+							%a.active(href="about.html")About
 						%li
 							%a(href="experiments.html")Experiments
 						%li
@@ -31,10 +31,9 @@
 			.container
 				.contentleft
 					%section.content-inner
-						%h2 Here There Be CSS
+						%h2 About Fran Levy
 						%p
-							Welcome to this chronicle of a Starter League student. This site serves as a showcase of my Advanced HTML/CSS class assignments and
-							<a href="experiments.html">experiments</a>. To find out more about what I&apos;ve learned, check out my <a href="blog.html">blog</a>.
+							I'm an urban-planner-turned-web-developer, seeking to make the world a better place. My projects cover a variety of topics, but the common thread running through them is the quest to improve people&apos;s lives in ways large and small.
 				.contentright
 					%aside
 						%p
