--- a/haml/experiments.haml
+++ b/haml/experiments.haml
@@ -80,7 +80,7 @@
 				.contentright
 					%aside
 						%p
-							Insert flattering <a href="about.html">photo</a> here.
+							Insert flattering photo here.
 						%p.text-center
 							Fran Levy
 					%aside
