--- a/sass/_genlayouttypography.sass
+++ b/sass/_genlayouttypography.sass
@@ -15,13 +15,13 @@ body
 	overflow: hidden
 	text-align: left
 
-//
+// (Used with the header stripe)
 	.container-header
 		padding-bottom: 1.35em
-
-.clearfloat
-	width: 100%
-	clear: both
+//
+	.clearfloat
+		width: 100%
+		clear: both
 
 /* .inline-list margin 0.625em = 10px based on default body font size of 1em = 16px */
 .inline-list
@@ -45,7 +45,7 @@ p
 h1
 	margin: 0.4em 0 0.4em
 	font:
-		size: 2.5em
+		size: 2.6em
 		weight: normal
 		family: $serif-title
 		style: italic
@@ -59,15 +59,15 @@ h2, h3, h4, h5, h6
 	letter-spacing: 0.05em
 
 h2
-	font-size: 2.1em
+	font-size: 2.0em
 
 h3
 	font:
-		size: 1.6em
+		size: 1.5em
 		weight: bold
 
 h4
-	font-size: 1.4em
+	font-size: 1.3em
 
 h5
 	font-size: $font-base
