--- a/sass/_headernavfooter.sass
+++ b/sass/_headernavfooter.sass
@@ -2,7 +2,7 @@
 
 header
 	background: $light-brown
-	@include inner-shadow(inset, 0, 0, 1em, $brown-shadow)
+	@include box-shadow(inset, 0, 0, 1em, $brown-shadow, 0em, 0em, 0.75em, 0.25em, $black)
 
 //
 	.stripe
