--- a/sass/_maincontent.sass
+++ b/sass/_maincontent.sass
@@ -2,8 +2,9 @@
 
 /* 1em = 16px based on body font size */
 
-.maincontent
-	@include inner-shadow(inset, 0, 0, 1em, $black)
+//
+	.maincontent
+		@include inner-shadow(inset, 0, 0, 0.75em, $black)
 
 .contentleft
 	@include width-float(70%, left)
