--- a/sass/_maincontent.sass
+++ b/sass/_maincontent.sass
@@ -2,9 +2,8 @@
 
 /* 1em = 16px based on body font size */
 
-//
-	.maincontent
-		@include inner-shadow(inset, 0, 0, 0.75em, $black)
+.maincontent
+	padding: 0.3em 0
 
 .contentleft
 	@include width-float(70%, left)
