--- a/sass/_alert.sass
+++ b/sass/_alert.sass
@@ -3,7 +3,7 @@
 	text-align: center
 	width: auto
 	margin: 1em 0
-	padding: 0.5em
+	padding: 0.6em
 	border: 
 		radius: 2em
 		style: solid
@@ -26,10 +26,11 @@
 	font-weight: bold
 	color: $dark-grey
 	text-align: center
-	padding: 0.25em 0.5em 0.4em
+	margin: -0.35em -0.2em 0 0
+	padding: 0.1em 0.4em 0.3em
 	border-radius: 2em
 	border: 0.15em solid $dark-grey
-	background-color: #fff
+	background-color: $white
 	//
 		opacity: 0.6
 	//
