--- a/sass/_headernavfooter.sass
+++ b/sass/_headernavfooter.sass
@@ -2,7 +2,7 @@
 
 header
 	background: $light-brown
-	@include box-shadow(inset, 0, 0, 1em, $brown-shadow, 0em, 0em, 0.75em, 0.25em, $black)
+	@include box-shadow(inset 0 0 1em $brown-shadow, 0em 0em 1.75em 0.05em $dark-grey)
 
 //
 	.stripe
@@ -64,14 +64,16 @@ footer
 		color: $white
 		font-weight: bold
 
-	@include inner-shadow(inset, 0, 0, 0.5em, $brown-shadow)
+	@include box-shadow(inset 0 0 0.5em $brown-shadow, 0em -0.1em 2em 0.05em $dark-grey)
 		
 .footer-left
-	@include width-float(60%, left)
+	@include width-float(50%, left)
 
 .small-column
 	@include width-float(25%, left)
 	padding: 1em
 
 .socialmedia
-	@include width-float(40%, right)
+	@include width-float(49%, right)
+	text-align: right
+	padding-right: 1%
