--- a/sass/global.sass
+++ b/sass/global.sass
@@ -6,7 +6,7 @@ $white: #FFF
 $black: #000000
 $green: #CF9
 $light-brown: #97190F
-$brown: #7A130C
+$brown: #85160D
 $brown-shadow: #3A0000
 $dark-grey: #404040
 
