--- a/sass/_reset.sass
+++ b/sass/_reset.sass
@@ -1,7 +1,8 @@
 //
     html5doctor.com Reset Stylesheet v1.6.1 
     html5doctor.com/html-5-reset-stylesheet/
-    Richard Clark richclarkdesign.com
+    by Richard Clark 
+    richclarkdesign.com
     cssreset.com
 
 /**** html5doctor.com Reset Stylesheet ***/
