--- a/sass/_genlayouttypography.sass
+++ b/sass/_genlayouttypography.sass
@@ -6,6 +6,9 @@ body
 	font: 
 		family: $sans-serif
 		size: 16px
+	background: $brown
+	@include box-shadow(inset 0 0 0.6em $brown-shadow)
+
 
 .container
 	margin: 0 auto
