--- a/sass/_maincontent.sass
+++ b/sass/_maincontent.sass
@@ -4,6 +4,8 @@
 
 .maincontent
 	padding: 0.3em 0
+	@include chegg-white
+	@include box-shadow(0 0 0.5em $brown-shadow)
 
 .contentleft
 	@include width-float(70%, left)
