--- a/haml/index.haml
+++ b/haml/index.haml
@@ -33,7 +33,7 @@
 					%section.content-inner
 						%h2 Here There Be CSS
 						%p
-							Welcome to this chronicle of a Starter League student. This site serves as a showcase of my Advanced HTML/CSS class assignments and
+							Come and read the thriling chronicles of a Starter League student. This site provides a place to implement my Advanced HTML/CSS class
 							<a href="experiments.html">experiments</a>. To find out more about what I&apos;ve learned, check out my <a href="blog.html">blog</a>.
 				.contentright
 					%aside
@@ -52,13 +52,13 @@
 							And here.
 
 		/ Footer
-		%footer
-			.container
-				.footer-left
-					%p
-						&copy; 2013 Fran Levy. All rights reserved.
-				.socialmedia
-					%p
-						Insert social media here
+		.container.footer
+			.footer-left
+				%p
+					&copy; 2013 Fran Levy. All rights reserved.
+			.socialmedia
+				%p
+					Insert social media here
+
 		%script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js")
 		%script(src="js/script.js")
