--- a/sass/_headernavfooter.sass
+++ b/sass/_headernavfooter.sass
@@ -1,9 +1,5 @@
 /**** Header, Navigation, & Footer ****/
 
-header
-	background: $light-brown
-	@include box-shadow(inset 0 0 1em $brown-shadow, 0em 0em 1.75em 0.05em $dark-grey)
-
 //
 	.stripe
 		color: $green
@@ -51,9 +47,8 @@ nav
 	.active, a:hover
 		@include nav-now
 
-footer
-	background: $brown
-	color: $white
+.footer
+	color: $white	
 	font:
 		family: $serif-title
 		weight: bold
@@ -63,8 +58,6 @@ footer
 	a, a:visited, a:hover, a:active
 		color: $white
 		font-weight: bold
-
-	@include box-shadow(inset 0 0 0.5em $brown-shadow, 0em -0.1em 2em 0.05em $dark-grey)
 		
 .footer-left
 	@include width-float(50%, left)
