Solved missing 'maincontent' background problem: The file pathway included a . after images rather than a /. Changed the main content bacckground image to a warmer white (courtesy of basecamp.com).

--- a/sass/global.sass
+++ b/sass/global.sass
@@ -7,16 +7,15 @@ $white: #FFF
 $black: #000000
 $green: #CF9
 $light-brown: #97190F
-$brown: #97190F
+$brown: #6F120B
 $brown-shadow: #3A0000
 $dark-grey: #404040 
 
 // Mixins
 @mixin chegg-white
-	background
-		image: url('../images.chegg-white.png')
+	background:
+		image: url("../images/basecamp-white.jpeg")
 		repeat: repeat
-
 
 @mixin width-float($width, $float)
 	width: $width
