--- a/css/global.css
+++ b/css/global.css
@@ -38,7 +38,7 @@ body {
   padding: 0;
   font-family: Tahoma, Geneva, sans-serif;
   font-size: 16px;
-  background: #97190f;
+  background: #6f120b;
   -webkit-box-shadow: inset 0 0 0.6em #3a0000;
   -moz-box-shadow: inset 0 0 0.6em #3a0000;
   box-shadow: inset 0 0 0.6em #3a0000; }
@@ -112,7 +112,7 @@ nav {
   letter-spacing: 0.1em; }
   nav a:hover, nav a:active {
     background: #ccff99;
-    color: #97190f; }
+    color: #6f120b; }
 
 .nav-list {
   margin: 0;
@@ -128,7 +128,7 @@ nav {
     border-radius: 2em; }
   .nav-list .active, .nav-list a:hover {
     background: #ccff99;
-    color: #97190f; }
+    color: #6f120b; }
 
 .footer {
   color: white;
@@ -159,12 +159,11 @@ nav {
 /* 1em = 16px based on body font size */
 .maincontent {
   padding: 0.3em 0;
+  background-image: url("../images/basecamp-white.jpeg");
+  background-repeat: repeat;
   -webkit-box-shadow: 0 0 0.5em #3a0000;
   -moz-box-shadow: 0 0 0.5em #3a0000;
   box-shadow: 0 0 0.5em #3a0000; }
-  .maincontent background {
-    image: url("../images.chegg-white.png");
-    repeat: repeat; }
 
 .contentleft {
   width: 70%;
@@ -179,7 +178,7 @@ nav {
   width: auto;
   margin: 1.5em 0 2em; }
   .content-inner a, aside a {
-    color: #97190f;
+    color: #6f120b;
     font-weight: bold;
     font-size: 1.05em;
     text-decoration: none; }
@@ -227,7 +226,7 @@ aside {
 /* anchor tag */
 a.tooltip {
   position: relative;
-  color: #97190f;
+  color: #6f120b;
   font-weight: normal;
   font-size: 1em;
   text-decoration: underline; }
