--- a/haml/about.haml
+++ b/haml/about.haml
@@ -51,13 +51,13 @@
 							And here.
 
 		/ Footer
-		%footer
-			.container
-				.footer-left
-					%p
-						&copy; 2013 Fran Levy. All rights reserved.
-				.socialmedia
-					%p
-						Insert social media here
+		.container.footer
+			.footer-left
+				%p
+					&copy; 2013 Fran Levy. All rights reserved.
+			.socialmedia
+				%p
+					Insert social media here
+
 		%script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js")
 		%script(src="js/script.js")
