Starting to work out iPhone screen size specs in media query sass sheet.

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,3 +1,5 @@
 /**** Media Queries ****/
 
 // Screen size change #1: 980px. Move nav bar below title in header. Stretch nav items to full width?
+
+// Screen size Change #2: 320px by 480px.
