--- a/haml/index.haml
+++ b/haml/index.haml
@@ -53,12 +53,7 @@
 
 		/ Footer
 		.container.footer
-			.footer-left
-				%p
-					&copy; 2013 Fran Levy. All rights reserved.
-			.socialmedia
-				%p
-					Insert social media here
+			=render 'footer'
 
 		%script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js")
 		%script(src="js/script.js")
