Added some clarifying text to describe SASS code that's currently greyed-out.

--- a/sass/_headernavfooter.sass
+++ b/sass/_headernavfooter.sass
@@ -1,6 +1,6 @@
 /**** Header, Navigation, & Footer ****/
 
-//
+// Optional header stripe. Not in use right now.
 	.stripe
 		color: $green
 		position: relative
